--- a/docs/professor/jael_dos_santos.mdx
+++ b/docs/professor/jael_dos_santos.mdx
@@ -144,7 +144,7 @@ export const data = {
           teachers: [
             "Jael dos Santos"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
