--- a/docs/professor/jonathan_prass_souza.mdx
+++ b/docs/professor/jonathan_prass_souza.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sérgio Augusto Dias Castro",
+  title: "Jonathan Prass Souza",
   base: "",
   weekClasses: [
     {
@@ -15,7 +15,7 @@ export const data = {
           subject: "Matemática III",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 5",
           students: [
@@ -33,7 +33,7 @@ export const data = {
           subject: "Matemática 3",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -46,7 +46,7 @@ export const data = {
           subject: "Matemática 4",
           size: 3,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -64,7 +64,7 @@ export const data = {
           subject: "Matemática 1",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -77,7 +77,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -95,7 +95,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -108,7 +108,7 @@ export const data = {
           subject: "Matemática 2",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -121,7 +121,7 @@ export const data = {
           subject: "Fundamentos de Matemática",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "",
           students: [
@@ -134,9 +134,9 @@ export const data = {
           subject: "Matemática Aplicada",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -206,7 +206,7 @@ export const data = {
   ]
 }
 
-# Sérgio Augusto Dias Castro
+# Jonathan Prass Souza
 
 <div>
   {
