--- a/docs/professor/lechan_colares_santos.mdx
+++ b/docs/professor/lechan_colares_santos.mdx
@@ -66,7 +66,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
