--- a/docs/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
@@ -105,6 +105,19 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Espanhol Biopark"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "15:55 - 16:45",
+          color: ""
         }
       ]
     },
