--- a/docs/turma/ein/ein2024.mdx
+++ b/docs/turma/ein/ein2024.mdx
@@ -255,7 +255,7 @@ export const data = {
           subject: "Matemática 2",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 15-2",
           students: [
