--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -58,7 +58,7 @@ export const data = {
           subject: "Matemática III",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 5",
           students: [
@@ -117,6 +117,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Espanhol"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
