--- a/docs/turma/iiw/iiw2025a.mdx
+++ b/docs/turma/iiw/iiw2025a.mdx
@@ -250,7 +250,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -268,7 +268,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 9-2",
           students: [
