--- a/versioned_docs/version-2025.1.1/professor/jair_fajardo_junior.mdx
+++ b/versioned_docs/version-2025.1.1/professor/jair_fajardo_junior.mdx
@@ -13,7 +13,7 @@ export const data = {
           teachers: [
             "Jair Fajardo Junior"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
