--- a/docs/professor/espanhol.mdx
+++ b/docs/professor/espanhol.mdx
@@ -1,63 +1,34 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Jair Fajardo Junior",
+  title: "Espanhol",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Máquinas, Equipamentos e Instalações Industriais",
-          size: 2,
-          teachers: [
-            "Jair Fajardo Junior"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2025"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Elementos de Automação",
-          size: 2,
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
           teachers: [
-            "Jair Fajardo Junior"
+            "Espanhol"
           ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
+          classroom: "Sala 5",
           students: [
-            "ELM2024"
+            "IIW2023A"
           ],
-          time: "21:00 - 21:50",
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Eletricidade Básica",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Jair Fajardo Junior"
-          ],
-          classroom: "",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -65,21 +36,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Elementos de Automação",
-          size: 2,
-          teachers: [
-            "Jair Fajardo Junior"
-          ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
-          students: [
-            "EIN2023"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
@@ -142,7 +99,7 @@ export const data = {
   ]
 }
 
-# Jair Fajardo Junior
+# Espanhol
 
 <div>
   {
