--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -120,7 +120,7 @@ export const data = {
           subject: "Matemática 1",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 6-2",
           students: [
