--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -159,7 +159,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -190,7 +190,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 9-2",
           students: [
