--- a/docs/turma/ein/ein2025.mdx
+++ b/docs/turma/ein/ein2025.mdx
@@ -159,7 +159,7 @@ export const data = {
           subject: "Matemática 1",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 6-2",
           students: [
