--- a/docs/turma/elm/elm2025.mdx
+++ b/docs/turma/elm/elm2025.mdx
@@ -138,7 +138,7 @@ export const data = {
           subject: "Fundamentos de Matemática",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "",
           students: [
