--- a/versioned_docs/version-2025.1.1/professor/jonathan_prass_souza.mdx
+++ b/versioned_docs/version-2025.1.1/professor/jonathan_prass_souza.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Daniele de Almeida Paula",
+  title: "Jonathan Prass Souza",
   base: "",
   weekClasses: [
     {
@@ -12,16 +12,16 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Processamento e pós-colheita de produtos vegetais",
-          size: 4,
+          subject: "Matemática III",
+          size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Jonathan Prass Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 5",
           students: [
-            "TAL2024"
+            "IIW2023A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
@@ -30,16 +30,29 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Bromatologia dos Alimentos",
-          size: 4,
+          subject: "Matemática 3",
+          size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Jonathan Prass Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 11-2",
           students: [
-            "TAL2024"
+            "EIN2023"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática 4",
+          size: 3,
+          teachers: [
+            "Jonathan Prass Souza"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -48,29 +61,29 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Análise Sensorial",
+          subject: "Matemática 1",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Jonathan Prass Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 6-2",
           students: [
-            "TAL2024"
+            "EIN2025"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Tecnologia de bebidas",
+          subject: "Matemática I",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Jonathan Prass Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 9-2",
           students: [
-            "TAL2024"
+            "IIW2025A"
           ],
-          time: "21:00 - 21:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -79,16 +92,55 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de massas e panifícios",
-          size: 3,
+          subject: "Matemática I",
+          size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Jonathan Prass Souza"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática 2",
+          size: 2,
+          teachers: [
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 15-2",
           students: [
-            "TAL2024"
+            "EIN2024"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Fundamentos de Matemática",
+          size: 2,
+          teachers: [
+            "Jonathan Prass Souza"
+          ],
+          classroom: "",
+          students: [
+            "ELM2025"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Matemática Aplicada",
+          size: 2,
+          teachers: [
+            "Jonathan Prass Souza"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -154,7 +206,7 @@ export const data = {
   ]
 }
 
-# Daniele de Almeida Paula
+# Jonathan Prass Souza
 
 <div>
   {
