--- a/versioned_docs/version-2025.1.1/professor/karina_dias_espartosa.mdx
+++ b/versioned_docs/version-2025.1.1/professor/karina_dias_espartosa.mdx
@@ -96,7 +96,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
