--- a/versioned_docs/version-2025.1.1/professor/pedro_leites_junior.mdx
+++ b/versioned_docs/version-2025.1.1/professor/pedro_leites_junior.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -83,7 +83,7 @@ export const data = {
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
