--- a/versioned_docs/version-2025.1.1/sala/bloco_2/sala_15-2.mdx
+++ b/versioned_docs/version-2025.1.1/sala/bloco_2/sala_15-2.mdx
@@ -9,7 +9,34 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Métodos analíticos",
+          size: 2,
+          teachers: [
+            "Antonio Cesar Godoy"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de carnes e derivados II",
+          size: 2,
+          teachers: [
+            "Marcos Rogério Oliveira"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -52,6 +79,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 4,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -82,6 +122,19 @@ export const data = {
             "EIN2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Bromatologia dos Alimentos",
+          size: 4,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -114,6 +167,32 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Análise Sensorial",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de bebidas",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -137,13 +216,39 @@ export const data = {
           subject: "Matemática 2",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 15-2",
           students: [
             "EIN2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 3,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de carnes e derivados II",
+          size: 1,
+          teachers: [
+            "Marcos Rogério Oliveira"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:50 - 22:40",
           color: ""
         }
       ]
