--- a/versioned_docs/version-2025.1.1/sala/bloco_2/sala_16-2.mdx
+++ b/versioned_docs/version-2025.1.1/sala/bloco_2/sala_16-2.mdx
@@ -50,27 +50,27 @@ export const data = {
           color: ""
         },
         {
-          subject: "Métodos analíticos",
+          subject: "Comunicação Técnica",
           size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "19:00 - 19:50",
           color: ""
         },
         {
-          subject: "Tecnologia de carnes e derivados II",
+          subject: "Máquinas, Equipamentos e Instalações Industriais",
           size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Jair Fajardo Junior"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -94,14 +94,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Processamento e pós-colheita de produtos vegetais",
-          size: 4,
+          subject: "Comunicação Técnica",
+          size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -138,14 +138,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Bromatologia dos Alimentos",
+          subject: "Fundamentos da Química",
           size: 4,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -182,27 +182,27 @@ export const data = {
           color: ""
         },
         {
-          subject: "Análise Sensorial",
+          subject: "Ética e relações humanas no trabalho",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Jael dos Santos"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "19:00 - 19:50",
           color: ""
         },
         {
-          subject: "Tecnologia de bebidas",
+          subject: "Gestão e Planejamento Aplicados à Agroindústria",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Lechan Colares Santos"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -239,29 +239,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Tecnologia de massas e panifícios",
-          size: 3,
+          subject: "Gestão Ambiental na Indústria de Alimentos",
+          size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Karina Dias Espartosa"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
           time: "19:00 - 19:50",
           color: ""
         },
         {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 1,
+          subject: "Matemática Aplicada",
+          size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "TAL2025"
           ],
-          time: "21:50 - 22:40",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
