--- a/versioned_docs/version-2025.1.1/turma/ein/ein2023.mdx
+++ b/versioned_docs/version-2025.1.1/turma/ein/ein2023.mdx
@@ -115,7 +115,7 @@ export const data = {
           subject: "Matemática 3",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 11-2",
           students: [
