--- a/versioned_docs/version-2025.1.1/turma/tal/tal2025.mdx
+++ b/versioned_docs/version-2025.1.1/turma/tal/tal2025.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Jair Fajardo Junior"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -47,7 +47,7 @@ export const data = {
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -78,7 +78,7 @@ export const data = {
           teachers: [
             "Antonio Cesar Godoy"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -96,7 +96,7 @@ export const data = {
           teachers: [
             "Jael dos Santos"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -109,7 +109,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -127,7 +127,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
@@ -138,9 +138,9 @@ export const data = {
           subject: "Matemática Aplicada",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Jonathan Prass Souza"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
