--- a/docs/professor/alexandre_roberto_valcarenghi.mdx
+++ b/docs/professor/alexandre_roberto_valcarenghi.mdx
@@ -37,21 +37,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia II",
-          size: 2,
-          teachers: [
-            "Alexandre Roberto Valcarenghi"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -98,6 +84,19 @@ export const data = {
             "EIN2024"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Geografia II",
+          size: 2,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
