--- a/docs/professor/elias_franco.mdx
+++ b/docs/professor/elias_franco.mdx
@@ -12,7 +12,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Sociologia e extensão rural",
+          subject: "Sociologia e Extensão Rural",
           size: 2,
           teachers: [
             "Elias Franco"
@@ -34,7 +34,7 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Agricultura geral",
+          subject: "Agricultura Geral",
           size: 2,
           teachers: [
             "Elias Franco"
