--- a/docs/professor/haroldo_yutaka_misunaga.mdx
+++ b/docs/professor/haroldo_yutaka_misunaga.mdx
@@ -6,7 +6,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Empreendedorismo",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -77,19 +91,6 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Empreendedorismo",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
         {
           subject: "Gestão de Pessoas",
           size: 2,
