--- a/docs/professor/keitilanger_grisa_hahn.mdx
+++ b/docs/professor/keitilanger_grisa_hahn.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Planejamento e Gestão financeira",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Contabilidade de custo e formação de preços",
           size: 2,
           teachers: [
@@ -17,7 +30,7 @@ export const data = {
           students: [
             "COM2024"
           ],
-          time: "13:10 - 14:00",
+          time: "15:05 - 15:55",
           color: ""
         },
         {
@@ -31,6 +44,19 @@ export const data = {
             "TGC2025"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Técnicas de Vendas e Negociação",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -74,6 +100,19 @@ export const data = {
           students: [
             "TGC2024"
           ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Contabilidade de Custos e Formação de Preços",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2024"
+          ],
           time: "21:00 - 21:50",
           color: ""
         }
@@ -94,52 +133,12 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        },
-        {
-          subject: "Técnicas de Vendas e Negociação",
-          size: 2,
-          teachers: [
-            "Keitilanger Grisa Hahn"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Planejamento e Gestão financeira",
-          size: 2,
-          teachers: [
-            "Keitilanger Grisa Hahn"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Contabilidade de Custos e Formação de Preços",
-          size: 2,
-          teachers: [
-            "Keitilanger Grisa Hahn"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
