--- a/docs/professor/leiliane_cristine_de_souza.mdx
+++ b/docs/professor/leiliane_cristine_de_souza.mdx
@@ -65,7 +65,7 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Orientação de estágio supervisionado",
+          subject: "Orientação de Estágio Supervisionado",
           size: 1,
           teachers: [
             "Leiliane Cristine de Souza"
