--- a/docs/professor/marcos_rogerio_oliveira.mdx
+++ b/docs/professor/marcos_rogerio_oliveira.mdx
@@ -43,7 +43,7 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Nutrição e alimentação animal",
+          subject: "Nutrição e Alimentação Animal",
           size: 4,
           teachers: [
             "Marcos Rogério Oliveira"
