--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -21,7 +21,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e topografia",
+          subject: "Desenho Técnico e Topografia",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -34,7 +34,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e topografia",
+          subject: "Desenho Técnico e Topografia",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -65,7 +65,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e instalações agropecuárias",
+          subject: "Desenho Técnico e Instalações Agropecuárias",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
