--- a/docs/professor/sonia_maria_mandotti.mdx
+++ b/docs/professor/sonia_maria_mandotti.mdx
@@ -65,7 +65,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Agroecologia e desenvolvimento rural sustentavel",
+          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
             "Sônia Maria Mandotti"
