--- a/docs/professor/tatiane_martinazzo_portz.mdx
+++ b/docs/professor/tatiane_martinazzo_portz.mdx
@@ -26,7 +26,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Educação postural e Segurança no trabalho",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
             "Tatiane Martinazzo Portz"
