--- a/docs/professor/yohana_diel_saheli.mdx
+++ b/docs/professor/yohana_diel_saheli.mdx
@@ -21,7 +21,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua estrangeira - Inglês",
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
             "Yohana Diel Saheli"
@@ -100,6 +100,19 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Lingua Estrangeira Moderna 3 - Inglês",
           size: 1,
           teachers: [
@@ -110,19 +123,6 @@ export const data = {
             "EIN2022"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         }
       ]
