--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -148,7 +148,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Orientação de estágio supervisionado",
+          subject: "Orientação de Estágio Supervisionado",
           size: 1,
           teachers: [
             "Leiliane Cristine de Souza"
