--- a/docs/sala/bloco_2/laboratorio_de_desenho_tecnico___sala_5-2.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_desenho_tecnico___sala_5-2.mdx
@@ -24,7 +24,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e topografia",
+          subject: "Desenho Técnico e Topografia",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -37,7 +37,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e topografia",
+          subject: "Desenho Técnico e Topografia",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -68,7 +68,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e instalações agropecuárias",
+          subject: "Desenho Técnico e Instalações Agropecuárias",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
