--- a/docs/sala/bloco_2/sala_12-2.mdx
+++ b/docs/sala/bloco_2/sala_12-2.mdx
@@ -94,7 +94,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia e extensão rural",
+          subject: "Sociologia e Extensão Rural",
           size: 2,
           teachers: [
             "Elias Franco"
