--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -24,7 +24,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua estrangeira - Inglês",
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
             "Yohana Diel Saheli"
@@ -55,7 +55,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Educação postural e Segurança no trabalho",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
             "Tatiane Martinazzo Portz"
@@ -182,7 +182,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Agricultura geral",
+          subject: "Agricultura Geral",
           size: 2,
           teachers: [
             "Elias Franco"
