--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -107,7 +107,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia e extensão rural",
+          subject: "Sociologia e Extensão Rural",
           size: 2,
           teachers: [
             "Elias Franco"
@@ -252,7 +252,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Orientação de estágio supervisionado",
+          subject: "Orientação de Estágio Supervisionado",
           size: 1,
           teachers: [
             "Leiliane Cristine de Souza"
