--- a/docs/turma/agr/agr2025.mdx
+++ b/docs/turma/agr/agr2025.mdx
@@ -42,7 +42,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e instalações agropecuárias",
+          subject: "Desenho Técnico e Instalações Agropecuárias",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -60,7 +60,7 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Nutrição e alimentação animal",
+          subject: "Nutrição e Alimentação Animal",
           size: 4,
           teachers: [
             "Marcos Rogério Oliveira"
@@ -96,7 +96,7 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Agroecologia e desenvolvimento rural sustentavel",
+          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
             "Sônia Maria Mandotti"
