--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -60,7 +60,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Laboratório de Banco de Dados",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -76,19 +90,6 @@ export const data = {
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Laboratório de Banco de Dados",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2024A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         }
       ]
