--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -25,45 +25,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Direito do Trabalho e do consumidor",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Direito empresarial e tributário",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Direito Empresarial e Tributário",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
           subject: "Legislação Aplicada e Direito do Consumidor",
           size: 2,
           teachers: [
@@ -80,7 +41,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Direito do Trabalho e do consumidor",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -109,6 +84,32 @@ export const data = {
             "COM2024"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Direito empresarial e tributário",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Direito Empresarial e Tributário",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
