--- a/docs/professor/juliano_da_rocha_queiroz.mdx
+++ b/docs/professor/juliano_da_rocha_queiroz.mdx
@@ -10,21 +10,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Eletrônica",
-          size: 2,
-          teachers: [
-            "Juliano da Rocha Queiroz"
-          ],
-          classroom: "Laboratório de Eletricidade e Eletrônica B4",
-          students: [
-            "EIN2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -62,6 +48,19 @@ export const data = {
             "EIN2024"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Eletrônica",
+          size: 2,
+          teachers: [
+            "Juliano da Rocha Queiroz"
+          ],
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
+          students: [
+            "EIN2024"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
