--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -58,21 +58,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Biologia II",
-          size: 2,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: [
-            "IIW2024A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -88,6 +74,19 @@ export const data = {
             "EIN2023"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Biologia II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
