--- a/docs/turma/ago/ago2025.mdx
+++ b/docs/turma/ago/ago2025.mdx
@@ -24,7 +24,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua estrangeira - Inglês",
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
             "Yohana Diel Saheli"
@@ -50,7 +50,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e topografia",
+          subject: "Desenho Técnico e Topografia",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -89,7 +89,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenho técnico e topografia",
+          subject: "Desenho Técnico e Topografia",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
@@ -107,7 +107,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Educação postural e Segurança no trabalho",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
             "Tatiane Martinazzo Portz"
@@ -234,7 +234,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Agricultura geral",
+          subject: "Agricultura Geral",
           size: 2,
           teachers: [
             "Elias Franco"
