--- a/docs/professor/fabio_antonio_da_silva.mdx
+++ b/docs/professor/fabio_antonio_da_silva.mdx
@@ -6,10 +6,6 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Filosofia I",
@@ -21,37 +17,11 @@ export const data = {
           students: [
             "IIW2025B"
           ],
-          time: "13:10 - 14:00",
-          color: ""
-        },
-        {
-          subject: "Sociologia II",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "14:00 - 14:50",
-          color: ""
-        },
-        {
-          subject: "Filosofia III",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
           time: "15:05 - 15:55",
           color: ""
         },
         {
-          subject: "Sociologia I",
+          subject: "Filosofia I",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
@@ -66,10 +36,28 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "14:00 - 14:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Filosofia III",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
@@ -117,7 +105,7 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
+          subject: "Sociologia I",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
@@ -127,6 +115,19 @@ export const data = {
             "IIW2025B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
