--- a/docs/professor/professor_matematica_biopark.mdx
+++ b/docs/professor/professor_matematica_biopark.mdx
@@ -17,27 +17,28 @@ export const data = {
           students: [
             "IIW2025B"
           ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Professor Matemática Biopark"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Professor Matemática Biopark"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -56,14 +57,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática III",
+          subject: "Matemática II",
           size: 2,
           teachers: [
             "Professor Matemática Biopark"
           ],
-          classroom: "Sala 03 - CR Toledo",
+          classroom: "Sala 02 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -74,14 +75,14 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Matemática I",
+          subject: "Matemática III",
           size: 2,
           teachers: [
             "Professor Matemática Biopark"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Sala 03 - CR Toledo",
           students: [
-            "IIW2025B"
+            "IIW2023B"
           ],
           time: "07:30 - 08:20",
           color: ""
