--- a/docs/professor/talita_bortolini.mdx
+++ b/docs/professor/talita_bortolini.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
@@ -26,16 +39,16 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "Sala 03 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2025B"
           ],
-          time: "13:10 - 14:00",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -48,16 +61,29 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
+          subject: "Língua Portuguesa e Literatura III",
+          size: 1,
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Sala 03 - CR Toledo",
           students: [
-            "IIW2025B"
+            "IIW2023B"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
@@ -76,19 +102,6 @@ export const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "08:20 - 09:10",
           color: ""
         },
         {
