--- a/docs/professor/alexandre_jose_schumacher.mdx
+++ b/docs/professor/alexandre_jose_schumacher.mdx
@@ -12,6 +12,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Técnicas de venda e negociação",
+          size: 2,
+          teachers: [
+            "Alexandre José Schumacher"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Marketing Estratégico",
           size: 2,
           teachers: [
@@ -41,21 +54,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Técnicas de venda e negociação",
-          size: 2,
-          teachers: [
-            "Alexandre José Schumacher"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
