--- a/docs/professor/josiane_hammes.mdx
+++ b/docs/professor/josiane_hammes.mdx
@@ -17,20 +17,7 @@ export const data = {
           students: [
             "IIW2025B"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Biologia II",
-          size: 2,
-          teachers: [
-            "Josiane Hammes"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -43,21 +30,13 @@ export const data = {
           students: [
             "IIW2025B"
           ],
-          time: "10:15 - 11:05",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Lingua estrangeira - Inglês",
@@ -71,8 +50,43 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Biologia II",
+          size: 2,
+          teachers: [
+            "Josiane Hammes"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Josiane Hammes"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
