--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -8,24 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Geografia II",
           size: 1,
           teachers: [
@@ -35,10 +17,27 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
