--- a/docs/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Biologia III",
-          size: 2,
+          subject: "Geografia II",
+          size: 1,
           teachers: [
-            "Biologia Biopark"
+            "Renato Lada Guerreiro"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -29,19 +29,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Geografia II",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Física III",
           size: 2,
           teachers: [
@@ -51,7 +38,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -64,20 +51,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 1,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "13:10 - 14:00",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -92,32 +66,6 @@ export const data = {
           ],
           time: "14:00 - 14:50",
           color: ""
-        },
-        {
-          subject: "Filosofia III",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "15:05 - 15:55",
-          color: ""
-        },
-        {
-          subject: "Língua Estrangeira Moderna - Espanhol",
-          size: 1,
-          teachers: [
-            "Espanhol Biopark"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "15:55 - 16:45",
-          color: ""
         }
       ]
     },
@@ -125,7 +73,7 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia II",
+          subject: "Filosofia III",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
@@ -164,10 +112,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática III",
+          subject: "Biologia III",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Josiane Hammes"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -182,6 +130,32 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Professor Matemática Biopark"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 1,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "História III",
           size: 1,
           teachers: [
@@ -191,7 +165,20 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
@@ -213,6 +200,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Química III",
           size: 2,
           teachers: [
@@ -222,7 +222,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "08:20 - 09:10",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
