--- a/docs/turma/iiw/iiw2023b.mdx
+++ b/docs/turma/iiw/iiw2023b.mdx
@@ -24,37 +24,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia III",
-          size: 2,
-          teachers: [
-            "Biologia Biopark"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador III",
-          size: 1,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Geografia II",
           size: 1,
           teachers: [
@@ -64,9 +33,27 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         },
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          size: 2,
+          teachers: [
+            "PSS informática"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
         {
           subject: "Física III",
           size: 2,
@@ -77,7 +64,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -87,6 +74,19 @@ export const data = {
             "Jael dos Santos"
           ],
           classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -100,19 +100,6 @@ export const data = {
             "PSS informática"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 1,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 03 - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -133,29 +120,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia III",
-          size: 1,
+          subject: "Serviços em nuvem",
+          size: 2,
           teachers: [
-            "Fabio Antônio da Silva"
+            "PSS informática"
           ],
-          classroom: "Sala 03 - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2023B"
           ],
           time: "15:05 - 15:55",
-          color: ""
-        },
-        {
-          subject: "Língua Estrangeira Moderna - Espanhol",
-          size: 1,
-          teachers: [
-            "Espanhol Biopark"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "15:55 - 16:45",
           color: ""
         }
       ]
@@ -164,7 +138,7 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia II",
+          subject: "Filosofia III",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
@@ -203,10 +177,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática III",
+          subject: "Biologia III",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Josiane Hammes"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -221,16 +195,29 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          subject: "Matemática III",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Professor Matemática Biopark"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Sala 03 - CR Toledo",
           students: [
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 1,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -243,20 +230,20 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
-          subject: "Serviços em nuvem",
-          size: 2,
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
           teachers: [
-            "PSS informática"
+            "Talita Bortolini"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Sala 03 - CR Toledo",
           students: [
             "IIW2023B"
           ],
-          time: "10:15 - 11:05",
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
@@ -278,10 +265,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química III",
-          size: 2,
+          subject: "Sociologia II",
+          size: 1,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Fabio Antônio da Silva"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -291,12 +278,25 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
-          size: 2,
+          subject: "Projeto Integrador III",
+          size: 1,
           teachers: [
-            "Humberto Fioravante Ferro"
+            "PSS informática"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Cosme Oliveira da Silva"
+          ],
+          classroom: "Sala 03 - CR Toledo",
           students: [
             "IIW2023B"
           ],
